1.5.11.dev0
 * #341: Add "temporary_directory" option for changing Borg's temporary directory.
 * #352: Lock down systemd security settings in sample systemd service file.
 * #355: Fix traceback when a database hook value is null in a configuration file.

1.5.10
 * #347: Add hooks that run for the "extract" action: "before_extract" and "after_extract".
 * #350: Fix traceback when a configuration directory is non-readable due to directory permissions.
 * Add documentation navigation links on left side of all documentation pages.
 * Clarify documentation on configuration overrides, specifically the portion about list syntax:
   http://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#configuration-overrides
 * Clarify documentation overview of monitoring options:
   http://torsion.org/borgmatic/docs/how-to/monitor-your-backups/

1.5.9
 * #300: Add "borgmatic export-tar" action to export an archive to a tar-formatted file or stream.
 * #339: Fix for intermittent timing-related test failure of logging function.
 * Clarify database documentation about excluding named pipes and character/block devices to prevent
   hangs.
 * Add documentation on how to make backups redundant with multiple repositories:
   https://torsion.org/borgmatic/docs/how-to/make-backups-redundant/

1.5.8
 * #336: Fix for traceback when running Cronitor, Cronhub, and PagerDuty monitor hooks.

1.5.7
 * #327: Fix broken pass-through of BORG_* environment variables to Borg.
 * #328: Fix duplicate logging to Healthchecks and send "after_*" hooks output to Healthchecks.
 * #331: Add SSL support to PostgreSQL database configuration.
 * #333: Fix for potential data loss (data not getting backed up) when borgmatic omitted configured
   source directories in certain situations. Specifically, this occurred when two source directories
   on different filesystems were related by parentage (e.g. "/foo" and "/foo/bar/baz") and the
   one_file_system option was enabled.